# CPPTemolateDemo

./: CMakeLists.txt
cmake/: BuildType.cmake  GitCommitHash.cmake
include/: accum.hpp  accumtraits.hpp  sumpolicy.hpp  test.h
src/: main.cpp
